# aw-watcher-toggl-track

./: README.md  pyproject.toml
.github/workflows/: test.yml
aw_watcher_toggl_track/: __main__.py  main.py
