[tool.poetry]
name = "aw-watcher-toggl-track"
version = "0.1.0"
description = "Toggl Track watcher for ActivityWatch"
authors = ["Louis Tsai <louis993546@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/louis993546/aw-watcher-toggl-track"

[tool.poetry.scripts]
aw-watcher-toggl-track = "aw_watcher_toggl_track:main"

[tool.poetry.dependencies]
python = "^3.7"
aw-client = "^0.5.7"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "^0.910"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
